fix layout issue hiding name user in small devices

--- a/demo-shell-ng2/app/components/app-layout/app-layout.component.scss
+++ b/demo-shell-ng2/app/components/app-layout/app-layout.component.scss
@@ -49,4 +49,9 @@
             }
         }
     }
+
+    @media ($mat-small) {
+        .adf-userinfo-name{display: none;
+        }
+    }
 }
